k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pi-k3s
  labels:
    name: pi-k3s
    app: pi-calculator
