k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: pi-k3s
  labels:
    app: redis
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
    protocol: TCP
